--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-circular-progress-indicator": "^4.1.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-svg": "^12.3.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
